# codex-minibar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.ps1  build.rs  init_version_lol.py  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml
.vendor/: Cargo.toml
.vendor/src/: bindings.rs  element.rs  engine.rs  hooks.rs  host.rs  reconciler.rs  style.rs
.vendor/src/backend/: mod.rs
.vendor/src/backend/winui/: convert.rs  mod.rs
.vendor/src/reconciler/: diff_helpers.rs
.vendor/src/widgets/: border.rs  combo_box.rs  list_box.rs  navigation_view.rs  radio_buttons.rs  scroll_viewer.rs  stack_panel.rs  title_bar.rs
packaging/: installer.nsi
site/: index.html  script.js  styles.css
src/: acrylic.rs  app.rs  claude.rs  codex.rs  cursor.rs  discovery.rs  icons.rs  lib.rs  limits.rs  main.rs  notifications.rs  popup.rs  popup_window.rs  provider.rs  provider_registry.rs  scheduler.rs  settings.rs  settings_controls.rs  settings_window.rs  single_instance.rs  store.rs  theme.rs  tray.rs  updater.rs  usage.rs  worker.rs
