[package]
name = "codex-minibar"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
font8x8 = "0.3"
fontdue = "0.9"
png = "0.17"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
zip = "2"
windows-collections = { git = "https://github.com/microsoft/windows-rs", features = ["std"] }
windows-core = { git = "https://github.com/microsoft/windows-rs" }
windows-reactor = { path = ".vendor" }

[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24", default-features = false }
windows = { git = "https://github.com/microsoft/windows-rs", default-features = false, features = [
    "Data_Xml_Dom",
    "Foundation",
    "UI_Notifications",
] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs" }
winresource = "0.1"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
